Example usage + refactor

--- a/example/template.html
+++ b/example/template.html
@@ -59,7 +59,7 @@
         </tr>
         {% for key, value in images.image_pairs_results.iteritems() %}
         <tr>
-            <td><img src="{{key[0]}}" max-height="56" max-width="100"  class="img-rounded center-block"></td>
+            <td><img src="{{key[0]}}" max-height="56" max-width="auto"  class="img-rounded center-block"></td>
             <td><p class="text-center">{{value}}</p></td>
             <td><img src="{{key[1]}}" max-height="56" max-width="auto" class="img-rounded center-block"></td>
         </tr>
